# Getting-Organized---FastAPI

./: README.md  Untitled.ipynb  pyproject.toml
crafts_api/: ABOUT.md  README.md  myprojectbase.db  pyproject.toml
crafts_api/crafts_api/: main.py  schemas.py
crafts_api/python/: api_schemas.py  crud.py  database.py  main.py  project_data.py  project_model.py
crafts_api/python/templates/: index.html  table.html
