[tool.poetry]
name = "phase3project"
version = "0.1.0"
description = "api_for_my_craft_projects"
authors = ["Sophie Gamer <sophiergamer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
